fixed body size on mobile

--- a/style.css
+++ b/style.css
@@ -79,6 +79,10 @@
 }
 
 @media (max-width: 600px) {
+	body {
+		position: absolute;
+		/* width: 100vw; */
+	}
 	.container {
 		flex-direction: column;
 	}
@@ -86,9 +90,15 @@
 		flex-direction: row;
 		align-self: start;
 	}
+	.movesHistory {
+		display: none;
+	}
 	.board-b72b1 {
 		/* margin: auto;
 		padding-left:  */
+	}
+	.info {
+		width: auto;
 	}
 	.capturedPieces {
 		flex-direction: row;
